--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,9 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@types/pg": "^8.10.3",
+    "pg": "^8.11.3"
   }
 }
