--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,12 @@ services:
     #   POSTGRES_PASSWORD: postgres
     env_file:
         - .env
-
+  pgadmin:
+    container_name: pgadmin4_container
+    image: dpage/pgadmin4
+    # restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
