--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,25 @@ services:
       - /home/kun/projects/dbs/fiskal:/var/lib/postgresql/data
     ports:
       - 5432:5432
-    # environment:
-    #   POSTGRES_USER: postgres
-    #   POSTGRES_PASSWORD: postgres
     env_file:
         - .env
+    networks:
+      pgnet:
+        ipv4_address: 172.18.0.3
   pgadmin:
     container_name: pgadmin4_container
     image: dpage/pgadmin4
-    # restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: root
+    env_file:
+        - .env
     ports:
       - "5050:80"
+    networks:
+      pgnet:
+        ipv4_address: 172.18.0.2
+networks:
+  pgnet:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.18.0.0/24
