--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "fiskal",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "bun-types": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "name": "backend",
+  "version": "1.0.50",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "@types/pg": "^8.10.3",
-    "pg": "^8.11.3"
-  }
+    "@prisma/client": "5.3.1",
+    "elysia": "latest",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "bun-types": "latest",
+    "prisma": "^5.3.1"
+  },
+  "module": "src/index.js"
 }
