--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "5.3.1",
+    "@prisma/client": "latest",
     "elysia": "latest",
     "zod": "^3.22.2"
   },
